# Mnemosyne

./: .gitattributes  .gitignore  App.vcxproj  CMakeLists.txt  EpochEngine.sln  README.md  StaticLibEntryPoint.sln  build.bat  code_file_inventory.txt  mylib.vcxproj  mylib.vcxproj.filters
Engine/: CMakeLists.txt  Shared_Project.vcxitems  Shared_Project.vcxitems.filters  build.bat  vcpkg.json
Engine/examples/AppExample/: AppExample.vcxproj  CMakeLists.txt
Engine/examples/AppExample/assets/vulkan/shaders/: gui_frag.spv  gui_vert.spv
Engine/examples/AppExample/src/: app.cpp
Engine/examples/YourStaticLib/: CMakeLists.txt  YourStaticLib.cpp  YourStaticLib.vcxproj
Engine/include/: _epoch.stl_types.hpp  app_api.h  epoch.api_types.hpp  epoch.common.hpp  epoch.config.hpp  main.h
Engine/modules/: aatlas.manager.ixx  acontext.opengl.context.ixx  acontext.opengl.quad.ixx  acontext.opengl.renderer.ixx  acontext.opengl.textures.ixx  acontext.raylib.context.ixx  acontext.raylib.state.ixx  acontext.raylib.textures.ixx  acontext.sdl.context.ixx  acontext.sdl.textures.ixx  acontext.sfml.context.ixx  acontext.sfml.state.ixx  acontext.sfml.textures.ixx  acontext.softrenderer.context.ixx  acontext.vulkan.context-api.ixx  acontext.vulkan.context-api_unit.ixx  acontext.vulkan.context-commands.ixx  acontext.vulkan.context-descriptor.ixx  acontext.vulkan.context-device.ixx  acontext.vulkan.context-instance.ixx  acontext.vulkan.context-memory.ixx  acontext.vulkan.context-runtime.ixx  acontext.vulkan.context-shader_pipeline.ixx  acontext.vulkan.context-swapchain.ixx  aengine.core.context.ixx  aengine.core.logger.ixx  aengine.gui.ixx  aengine.gui.menu.ixx  aengine.gui.window_modal.ixx  aengine.input.ixx  aframework.ixx  core.assert.ixx  core.env.ixx  core.error.ixx  core.format.ixx  core.id.ixx  core.log.ixx  core.math.ixx  core.path.ixx  core.string.ixx  (+20 more)
Engine/src/: acontext.vulkan.context-texture.cpp  acontext.vulkan.context_buffers.cpp  acontext.vulkan.platform.context.cpp  aeditor.cpp  aengine.context.cpp  aengine.context.multiplexer.linux.cpp  aengine.context.multiplexer.win.cpp  aengine.cpp  aengine.gui.cpp  core.assert.cpp  core.env.cpp  core.log.cpp  core.path.cpp  core.string.cpp  core.time.cpp  epoch.ai.cpp  epoch.engine.cpp  epoch.headers.cpp  epoch.platform.context.cpp  epoch.platform.window.cpp  epoch.render.graph.cpp  epoch.systems.cpp  main.cpp  runtime.cpp
Engine/src/editor/: aeditor.scene.cpp
Engine/systems/ai/: ai_bot.hpp  ai_service.hpp  ai_types.hpp
Shared_Project/: CMakeLists.txt  Shared_Project.vcxitems  Shared_Project.vcxitems.filters  clean.bat
Shared_Project/examples/AppExample/: AppExample.vcxproj
Shared_Project/examples/YourStaticLib/: CMakeLists.txt  YourStaticLib.vcxproj  YourStaticLib.vcxproj.filters
Shared_Project/include/: app_api.h
Shared_Project/modules/: core.error.ixx  core.memory.store.ixx
Shared_Project/src/: core.assert.cpp  core.id.cpp  core.math.cpp  core.memory.cpp  core.memory.stage.cpp  core.memory.store.cpp  core.path.cpp  core.time.cpp  mylib.cpp  mylib.headers.cpp  tests_main.cpp
include/: main.h
modules/: core.assert.ixx  core.env.ixx  core.format.ixx  core.id.ixx  core.log.ixx  core.math.ixx  core.memory.index.ixx  core.memory.ixx  core.memory.stage.ixx  core.memory.store.ixx  core.memory.types.ixx  core.path.ixx  core.string.ixx  core.time.ixx  mylib.ixx  runtime.ixx
src/: app.cpp  core.env.cpp  core.error.cpp  core.format.cpp  core.log.cpp  core.memory.cpp  core.memory.index.cpp  core.memory.store.cpp  core.string.cpp  lib_main.cpp  runtime.cpp  tests_main.cpp
